# ampworks

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/linters/: .codespellrc  .flake8
.github/workflows/: ci.yaml  ci.yml  release.yml
docs/source/: conf.py  index.rst
docs/source/_static/: switcher.json
docs/source/_templates/: navbar-logo.html
docs/source/api/: index.rst
docs/source/api/ampworks/: index.rst
docs/source/api/ampworks/dqdv/: index.rst
docs/source/api/ampworks/gitt/: index.rst
docs/source/api/ampworks/plotutils/: index.rst
docs/source/api/ampworks/utils/: index.rst
docs/source/development/: code_of_conduct.rst  development_environments.rst  index.rst  issues_and_features.rst  patterns_and_conventions.rst  project_layout.rst  project_overview.rst  review_process.rst  tests_and_coverage.rst  version_control.rst
docs/source/examples/: index.rst
docs/source/user_guide/: index.rst
examples/: simple_dQdV_example.py  simple_example.py
inprogress/dash/: app.py
inprogress/dash/layout/: sidebar.py
inprogress/dash/pages/: dqv_analysis.py  user_guide.py
scripts/: version_checker.py
src/ampworks/: __init__.py  cli.py  mathutils.py  plotutils.py  utils.py
src/ampworks/_core/: __init__.py  _dataset.py  _read.py
src/ampworks/data/: __init__.py  _dataset.py  _read.py
src/ampworks/datasets/: __init__.py
src/ampworks/datasets/resources/: ici_charge.csv  ici_discharge.csv
src/ampworks/dqdv/: __init__.py  _dqdv_fitter.py  _dqdv_result.py  _dqdv_spline.py  _gui.py  _lam_lli.py  _tables.py
src/ampworks/dqdv/gui_files/: _gui.py
src/ampworks/dqdv/gui_files/assets/: styles.css
src/ampworks/dqdv/gui_files/layout/: navbar.py  sidebar.py
src/ampworks/dqdv/gui_files/pages/: components.py  dqdv_fitting.py  dqv_analysis.py  figures.py
src/ampworks/dqdv/ui_files/: instructions.ui  main.ui  options.ui
src/ampworks/gitt/: __init__.py  _dataclasses.py  _extract_params.py
src/ampworks/hppc/: __init__.py  _extract_impedance.py
src/ampworks/ici/: __init__.py  _dataclasses.py  _extract_params.py
src/ampworks/io/: __init__.py  _dataset.py  _from.py
src/ampworks/ocv/: __init__.py  _match_peaks.py
src/ampworks/plotutils/: __init__.py  _colors.py  _limits.py  _render.py  _style.py  _text.py  _ticks.py
src/ampworks/utils/: __init__.py  _alphanum_sort.py  _progress_bar.py  _rich_result.py  _rich_table.py  _timer.py
tests/: test_basics.py  test_gitt.py  test_ici.py  test_mathutils.py  test_plotutils.py  test_utils.py
