# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ampworks"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9,<3.14"
license = { file = "LICENSE.txt" }
description = "Processing and visualization tools for battery experiments."
authors = [{ name = "Corey R. Randall", email = "corey.randall@nrel.gov" }]
maintainers = [{ name = "Corey R. Randall", email = "corey.randall@nrel.gov" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    "scipy",
    "matplotlib",
    "pyqt5",
]

[project.scripts]
ampworks = "ampworks.cli:main"

[tool.setuptools.dynamic]
version = { attr = "ampworks.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ui"]

[project.optional-dependencies]
dev = [
    "nox",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "genbadge[all]",
    "codespell",
    "flake8",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-design",
    "sphinx-favicon",
    "sphinx-copybutton",
    "myst-nb",
    "numpydoc",
    "pydata-sphinx-theme",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://example.com"
Repository = "https://example.com"
Issues = "https://example.com"
