# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ampworks"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9,<3.14"
license = { file = "LICENSE.txt" }
description = "Processing and visualization tools for battery experiments."
authors = [{ name = "Corey R. Randall", email = "corey.randall@nrel.gov" }]
maintainers = [{ name = "Corey R. Randall", email = "corey.randall@nrel.gov" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "openpyxl",
    "matplotlib",
    "dash",
    "dash-ag-grid",
    "dash-extensions",
    "dash-breakpoints",
    "dash-bootstrap-templates",
    "dash-bootstrap-components",
]

[project.scripts]
ampworks = "ampworks.cli:main"

[tool.setuptools.dynamic]
version = { attr = "ampworks.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ico", ".css"]

[project.optional-dependencies]
dev = [
    "nox",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "genbadge[all]",
    "codespell",
    "flake8",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-design",
    "sphinx-favicon",
    "sphinx-copybutton",
    "myst-nb",
    "numpydoc",
    "pydata-sphinx-theme",
]

[project.urls]
Homepage = "https://github.com/NREL/ampworks"
Documentation = "https://github.com/NREL/ampworks"
Repository = "https://github.com/NREL/ampworks"
Issues = "https://github.com/NREL/ampworks/issues"
